@startuml
class Solution43 {
    String siteName
    String authorName
    String jssFolder
    String cssFolder

    'get the input
    PromptUser prompt = new PromptUser()
    siteName = prompt.promptName()
    authorName = prompt.promptAuthor()
    jsFolder = prompt.askJsFolder()
    cssFolder = prompt.askCssFolder()

    'method to generate index files
    GenerateFiles generatefiles = new GenerateFiles()
    generateFiles.generateIndexFile(siteName, authorName)

    ' method if user wants jsFolder
    generateFiles.generatejsFolder()

    ' method if user wants cssFolder
    generateFiles.generatecssFolder()

    Output output = new Output()
    output.outputcreatedFiles(jsFolder, cssFolder)

}

Solution43 --o PromptUser
class PromptUser {
    +promptName()
    +promptAuthor()
    +askJsFolder()
    +askCssFolder()

}

Solution43 --o GenerateFiles

class GenerateFiles {
    +generateIndexFile(String siteName, String authorName)
    +generatejsFolder()
    +generatecssFolder()
}

Solution43 --o Output

class Output {
    +outputcreatedFiles(String jsFolder, String cssFolder)
}
@enduml